--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,3 +25,13 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+      - name: replace 
+        run: sed "s/${eeeeee}/${{ github.sha }}/" request.json
+        
+      - name: Publish
+        run: curl \
+          -X POST \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/${{ github.repo }}/check-runs \
+          -d @request.json
