--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,8 +30,10 @@ jobs:
         run: sed "s/${eeeeee}/${{ github.sha }}/" request.json
         
       - name: Publish
-        run: curl \
-            -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repo }}/check-runs \
-            -d @request.json
+        run: |
+         curl \
+         -X POST \
+         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+         -H "Accept: application/vnd.github.v3+json" \
+         -d @request.json \
+         https://api.github.com/repos/${{ github.repository }}/check-runs
