--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
           echo test, and deploy your project.
           
       - name: replace 
-        run: sed "s/${eeeeee}/${{ github.sha }}/" request.json
+        run: sed "s/${var}/${{ github.sha }}/" ./request.json
         
       - name: Publish
         run: |
