--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,58 +20,12 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          
-      - name: replace 
-        run: sed -i "s/varrrr/${{ github.sha }}/g" ./request.json
-        
-      - name: read 
-        run: cat ./request.json
-        
-      - name: Publish
-        run: |
-         curl \
-         -X POST \
-         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-         -H "Accept: application/vnd.github.v3+json" \
-         -d @request.json \
-         https://api.github.com/repos/${{ github.repository }}/check-runs
-         
-      - name: replace  2
-        run: sed -i "s/varrrr/${{ github.event.pull_request.head.sha }}/g" ./request2.json
-        
-      - name: read  2
-        run: cat ./request2.json
-        
-      - name: Publish 3
-        run: |
-         curl \
-         -X POST \
-         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-         -H "Accept: application/vnd.github.v3+json" \
-         -d @request2.json \
-         https://api.github.com/repos/${{ github.repository }}/check-runs
-         
-      - name: replace 3
-        run: sed -i "s/varrrr/${{ github.event.client_payload.sha }}/g" ./request3.json
-        
-      - name: read  3
-        run: cat ./request3.json
-        
-      - name: Publish 3
-        run: |
-         curl \
-         -X POST \
-         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-         -H "Accept: application/vnd.github.v3+json" \
-         -d @request3.json \
-         https://api.github.com/repos/${{ github.repository }}/check-runs
+      - name: Build and publich
+        run: mvn install
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPOSITORY: ${{ github.repository }}
+          COMMIT_SHA: ${{ github.sha }}
+          PR_COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
+          EXTERNAL_REPOSITORY: ${{ github.event.client_payload.repository }}
+          EXTERNAL_REPOSITORY_SHA: ${{ github.event.client_payload.sha }}
