--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,6 +27,11 @@ jobs:
           mvn install
           mvn install
           mvn install
+          mvn install
+          mvn install
+          mvn install
+          mvn install
+          mvn install
         env:
           GITHUB_USERNAME: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
